# four-equals-ten-solver

./: .gitignore  Cargo.toml  README.md  todo.md
src/: configurator.rs  io_reader.rs  lib.rs  main.rs  profile.rs
src/solver/: brute_forcer.rs  evaluator.rs  mod.rs  operator_permutator.rs  tokenizer.rs  unsafe_push.rs
