# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "four-equals-ten"
version = "1.3.2"
edition = "2021"
repository = "https://github.com/lanye74/four-equals-ten-solver"
# TODO: add rust-version here when i eventually get to use collect_into


[profile.flamegraph]
inherits = "release"
debug = true
