# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "four-equals-ten"
version = "1.8.0"
edition = "2021"
repository = "https://github.com/lanye74/four-equals-ten-solver"


[profile.release]
panic = "abort"


[profile.flamegraph]
inherits = "release"
debug = true
panic = "abort"
